Changes to Version 2.5-0

  o Synchronize version numbers with minor versions of the Rcmdr package.
  
  o Show axis ticks at observed values in discretePlot() (suggestion of Beatriz Lacruz Casaucau).
  
  o binnedCounts() reports percentage as well as frequency distribution (suggestion of Beatriz Lacruz Casaucau).

Changes to Version 1.0-10

  o Make indexplot() compatible with car 3.0-0.

Changes to Version 1.0-9

  o Fixed bug in discretePlot() (reported by Felipe Rafael Ribeiro Melo).

Changes to Version 1.0-8

  o readSPSS() now can process value labels when haven::read_SPSS() is called; new use.value.labels argument, defaults to TRUE (after report by Manuel Munoz Marquez).

Changes to Version 1.0-7

  o No longer import print.rcorr from Hmisc.

Changes to Version 1.0-6

  o Added readSAS() for SAS b7dat files.
  
  o Added readStata() for improved input of Stata .dta files.
  
  o Added readSPSS() for reading SPSS .sav and .por files.
  
  o Improvements to plotMeans() legends.
  
  o Barplot() can now compute conditional percentages (suggestion of Beatriz Lacruz); other improvements.
  
  o Hist() now invisibly returns a "hist" object or list of "hist" objects (suggestion of Beatriz Lacruz).
  
  o renamed bin.var() as binVariable(), retaining bin.var() as a synomym.
  
  o Added discretePlot() for plotting distributions of discrete numeric variables (after a suggestion of Beatriz Lacruz).
  
  o Added plotBoot() for plotting bootstrap distributions.
  
  o indexplot() can now plot multiple variables (suggestion of Manuel Munoz).
  
  o Added binnedCounts() for binned frequency distribution of a numeric variable (suggestion of Manuel Munoz).
  
  o Added normalityTests() for various tests of normality.
  
  o Small bug fixes.

Changes to Version 1.0-5

  o Added connect argument to plotMeans() (suggestion of Graham Smith).
  
  o Added capability to plot regions under density functions to plotDistr().
  